{
  "version": 4,
  "terraform_version": "1.2.8",
  "serial": 38,
  "lineage": "fa2869f3-daa5-c025-d0e3-ebe5e1e1424c",
  "resources": [
    {
      "mode": "data",
      "type": "azurerm_public_ip",
      "name": "pr-ip-data",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/28c33e77-de83-40c3-8280-d968b16d2e4a/resourceGroups/project-resume-rg/providers/Microsoft.Network/publicIPAddresses/project-resume-pip",
            "idle_timeout_in_minutes": 30,
            "ip_address": "13.94.157.32",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "project-resume-pip",
            "resource_group_name": "project-resume-rg",
            "sku": "Basic",
            "tags": {
              "environment": "project-resume"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "pr-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/28c33e77-de83-40c3-8280-d968b16d2e4a/resourceGroups/project-resume-rg/providers/Microsoft.Network/networkInterfaces/project-resume-nic",
            "internal_domain_name_suffix": "l1cydsmmy5hubnfvhzhkzeimyh.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/28c33e77-de83-40c3-8280-d968b16d2e4a/resourceGroups/project-resume-rg/providers/Microsoft.Network/publicIPAddresses/project-resume-pip",
                "subnet_id": "/subscriptions/28c33e77-de83-40c3-8280-d968b16d2e4a/resourceGroups/project-resume-rg/providers/Microsoft.Network/virtualNetworks/project-resume-vn/subnets/project-resume-snet"
              }
            ],
            "location": "westeurope",
            "mac_address": "00-0D-3A-23-81-59",
            "name": "project-resume-nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "project-resume-rg",
            "tags": {
              "environment": "project-resume"
            },
            "virtual_machine_id": "/subscriptions/28c33e77-de83-40c3-8280-d968b16d2e4a/resourceGroups/project-resume-rg/providers/Microsoft.Compute/virtualMachines/project-resume-vm"
          },
          "dependencies": [
            "azurerm_public_ip.pr-ip",
            "azurerm_resource_group.pr-rg",
            "azurerm_subnet.pr-snet",
            "azurerm_virtual_network.pr-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "pr-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/28c33e77-de83-40c3-8280-d968b16d2e4a/resourceGroups/project-resume-rg/providers/Microsoft.Network/networkSecurityGroups/project-resume-sg",
            "location": "westeurope",
            "name": "project-resume-sg",
            "resource_group_name": "project-resume-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "project-resume-sr",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "project-resume"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.pr-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "pr-sr",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/28c33e77-de83-40c3-8280-d968b16d2e4a/resourceGroups/project-resume-rg/providers/Microsoft.Network/networkSecurityGroups/project-resume-sg/securityRules/project-resume-sr",
            "name": "project-resume-sr",
            "network_security_group_name": "project-resume-sg",
            "priority": 100,
            "protocol": "*",
            "resource_group_name": "project-resume-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.pr-sg",
            "azurerm_resource_group.pr-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pr-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/28c33e77-de83-40c3-8280-d968b16d2e4a/resourceGroups/project-resume-rg/providers/Microsoft.Network/publicIPAddresses/project-resume-pip",
            "idle_timeout_in_minutes": 30,
            "ip_address": "13.94.157.32",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "project-resume-pip",
            "resource_group_name": "project-resume-rg",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "project-resume"
            }
          },
          "dependencies": [
            "azurerm_resource_group.pr-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "pr-snet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/28c33e77-de83-40c3-8280-d968b16d2e4a/resourceGroups/project-resume-rg/providers/Microsoft.Network/virtualNetworks/project-resume-vn/subnets/project-resume-snet",
            "name": "project-resume-snet",
            "resource_group_name": "project-resume-rg",
            "virtual_network_name": "project-resume-vn"
          },
          "dependencies": [
            "azurerm_resource_group.pr-rg",
            "azurerm_virtual_network.pr-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "pr-sga",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/28c33e77-de83-40c3-8280-d968b16d2e4a/resourceGroups/project-resume-rg/providers/Microsoft.Network/virtualNetworks/project-resume-vn/subnets/project-resume-snet",
            "network_security_group_id": "/subscriptions/28c33e77-de83-40c3-8280-d968b16d2e4a/resourceGroups/project-resume-rg/providers/Microsoft.Network/networkSecurityGroups/project-resume-sg",
            "subnet_id": "/subscriptions/28c33e77-de83-40c3-8280-d968b16d2e4a/resourceGroups/project-resume-rg/providers/Microsoft.Network/virtualNetworks/project-resume-vn/subnets/project-resume-snet"
          },
          "dependencies": [
            "azurerm_network_security_group.pr-sg",
            "azurerm_resource_group.pr-rg",
            "azurerm_subnet.pr-snet",
            "azurerm_virtual_network.pr-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "pr-vn",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "c981c55e-c78c-40cf-b4b5-3e4eac910cc7",
            "id": "/subscriptions/28c33e77-de83-40c3-8280-d968b16d2e4a/resourceGroups/project-resume-rg/providers/Microsoft.Network/virtualNetworks/project-resume-vn",
            "location": "westeurope",
            "name": "project-resume-vn",
            "resource_group_name": "project-resume-rg",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/28c33e77-de83-40c3-8280-d968b16d2e4a/resourceGroups/project-resume-rg/providers/Microsoft.Network/virtualNetworks/project-resume-vn/subnets/project-resume-snet",
                "name": "project-resume-snet",
                "security_group": "/subscriptions/28c33e77-de83-40c3-8280-d968b16d2e4a/resourceGroups/project-resume-rg/providers/Microsoft.Network/networkSecurityGroups/project-resume-sg"
              }
            ],
            "tags": {
              "environment": "project-resume"
            }
          },
          "dependencies": [
            "azurerm_resource_group.pr-rg"
          ]
        }
      ]
    }
  ]
}